--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=400, user-scalable=no">
-    <title>雞肉飯要每天吃</title>
+    <title>雞肉飯天天吃</title>
     <style>
     :root {
         --primary-color: #333333;
