--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,22 @@
         <div class="login-container">
             <h2>請先登入</h2>
             <div id="googleSignInContainer" class="google-signin">
-                <!-- Google 登入按鈕的內容保持不變 -->
+                <div id="g_id_onload"
+                    data-client_id="956050785639-m8f7ps3h62f2dukg9s0vd6dvafg22h89.apps.googleusercontent.com"
+                    data-context="signin"
+                    data-ux_mode="popup"
+                    data-callback="handleCredentialResponse"
+                    data-auto_prompt="false"
+                    data-itp_support="true">
+                </div>
+                <div class="g_id_signin"
+                    data-type="standard"
+                    data-shape="rectangular"
+                    data-theme="outline"
+                    data-text="signin_with"
+                    data-size="large"
+                    data-logo_alignment="left">
+                </div>
             </div>
         </div>
     </div>
