--- a/index.html
+++ b/index.html
@@ -298,16 +298,20 @@
     h1 {
         color: var(--text-color);
         font-size: 22px;
-        margin-bottom: 0px;
-        border-bottom: 2px solid var(--button-orange);
-        padding-bottom: 5px;
-		position: relative;
-		transition: all 0.3s ease;
+        margin-bottom: 2px; /* 改為 2px */
+        border-bottom: none; /* 移除原本的邊框 */
+        padding-bottom: 3px; /* 減少下方內邊距 */
+        position: relative;
+        transition: all 0.3s ease;
+        width: 100%; /* 確保寬度與父容器一致 */
+        max-width: 394px; /* 設定最大寬度，394px = 400px - 6px (左右padding) */
     }
+
 	h1:hover {
         transform: translateY(-2px);
         text-shadow: 0 2px 4px rgba(255, 156, 51, 0.3);
     }
+
 	h1::after {
         content: '';
         position: absolute;
@@ -316,8 +320,8 @@
         width: 100%;
         height: 2px;
         background: var(--button-orange);
-        transform: scaleX(0);
-        transform-origin: right;
+        transform: scaleX(1); /* 改為預設顯示 */
+        transform-origin: center; /* 改為從中間開始 */
         transition: transform 0.6s ease-out;
     }
 
@@ -830,7 +834,7 @@
 </head>
 <body>
 
-	<div style="text-align: center; position: relative; display: flex; align-items: center; justify-content: center; padding: 10px 0;">
+	<div style="text-align: center; position: relative; display: flex; align-items: center; justify-content: center; padding: 5px 0; width: calc(100% - 6px);">
         <h1 style="margin: 0;">小朋友專用計算機</h1>
     </div>
 	
