--- a/index.html
+++ b/index.html
@@ -715,10 +715,11 @@
     	position: relative;
 	}
 
-	/* 移除 footer-spacing，因為不再需要為固定定位預留空間 */
-    .footer-spacing {
-        display: none;
-    }
+	.footer-spacing {
+		background-color: #333333;
+		height: 30px;
+		margin-top: 0px;
+	}
 
 	.footer-message::before {
 		content: '🍚';
