--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=400, user-scalable=no">
+
+    <!-- 在現有的 meta 標籤下方添加 -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <title>雞肉飯天天吃</title>
     <style>
 
