--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="zh-TW">
 <head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XE5XMQR0Z1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XE5XMQR0Z1');
+    </script>
+
     <!-- 在 <head> 標籤內添加以下內容 -->
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#333333">
