--- a/index.html
+++ b/index.html
@@ -945,6 +945,7 @@
     <div class="row">
         <span class="label">稅後利率</span>
         <input type="number" id="afterTaxRate" step="0.001" class="readonly" readonly>
+        <span style="margin-left: 0px; color: var(--text-color);">%</span>
     </div>
 
      <div class="row">
