--- a/index.html
+++ b/index.html
@@ -582,11 +582,6 @@
         flex-shrink: 0;
     }
 
-    .divider {
-        border-top: 2px solid var(--border-color);
-        margin: 10px 0;
-    }
-
     .function-buttons {
         display: flex;
         justify-content: space-around;
@@ -776,39 +771,36 @@
     }
 
 
-    /* 更新分隔線樣式 */
-    .divider {
-        position: relative;
-        height: 2px;
-        background: linear-gradient(
-            90deg,
-            transparent,
-            var(--button-orange) 20%,
-            var(--button-orange) 80%,
-            transparent
-        );
-        margin: 5px 0;
-        opacity: 0;
-        animation: dividerFadeIn 0.8s ease forwards;
-        overflow: hidden;
-    }
+    /* 1. 流光分隔線 */
+    .divider-flow {
+            position: relative;
+            height: 2px;
+            background: linear-gradient(90deg, 
+                var(--secondary-color) 0%,
+                var(--button-orange) 50%,
+                var(--secondary-color) 100%);
+            margin: 15px 0;
+            overflow: hidden;
+        }
 
-    /* 添加發光效果的偽元素 */
-    .divider::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(
-            90deg,
-            transparent,
-            rgba(255, 156, 51, 0.6),
-            transparent
-        );
-        animation: dividerGlow 3s ease-in-out infinite;
-    }
+        .divider-flow::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg,
+                transparent,
+                rgba(255, 156, 51, 0.8),
+                transparent);
+            animation: flowLight 3s ease-in-out infinite;
+        }
+
+        @keyframes flowLight {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(200%); }
+        }
 
     /* 分隔線淡入動畫 */
     @keyframes dividerFadeIn {
@@ -833,11 +825,6 @@
         100% {
             left: 100%;
         }
-    }
-
-    /* 懸停效果 */
-    .divider:hover::before {
-        animation-duration: 1.5s;
     }
 
 </style>
@@ -977,7 +964,7 @@
         <span style="margin-left: 0px; color: var(--text-color);">%</span>
     </div>
 
-    <div class="divider"></div>
+    <div class="divider-flow"></div>
 
     <div class="row">
         <span class="label">百萬每年利息</span>
@@ -999,7 +986,7 @@
         <input type="number" id="monthlyTenThousandInterest" class="readonly" readonly>
     </div>
 
-    <div class="divider"></div>
+    <div class="divider-flow"></div>
 
     <div class="row">
         <span class="label">本月資金成本</span>
@@ -1020,7 +1007,7 @@
     </div>
 	
 	<!-- 在最後一個 .row div 後面添加 -->
-	<div class="divider"></div>
+	<div class="divider-flow"></div>
 
 	<div class="function-buttons">
     	<button onclick="window.open('https://travel.chiayi.gov.tw/Folder/TurkeyRice', '_blank')">雞肉飯</button>
@@ -1030,8 +1017,8 @@
 
     <div class="footer-message">報價後記得吃碗火雞肉飯唷！</div>
 
-    <div class="divider"></div>
-
+    <div class="divider-flow"></div>
+    
     <!-- 使用者資料區塊 -->
     <div id="userProfile" style="display: none;">
         <div style="display: flex; align-items: center; justify-content: center; gap: 8px;">
