--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
     <script type="module" src="./app.js"></script>
 	
     <div class="time-display-wrapper">
-        <div id="timeDisplay" style="display: flex; justify-content: center;">
+        <div id="timeDisplay" class="sticky-header" style="display: flex; justify-content: center;">
             <span class="time-label">報價時間：</span>
             <span id="currentTime"></span>
         </div>
