--- a/index.html
+++ b/index.html
@@ -910,6 +910,7 @@
         <button onclick="setPeriod(36)">3</button>
         <button onclick="setPeriod(48)">4</button>
         <button onclick="setPeriod(60)">5</button>
+        <button onclick="setPeriod(72)">6</button>
       	<button onclick="adjustPeriod(1)">+1</button>
 	</div>
 
@@ -1039,7 +1040,7 @@
 
     <div class="row">
         <span class="label">本月資金成本</span>
-        <input type="number" id="monthlyCost" value="2.1023" class="readonly" readonly>
+        <input type="number" id="monthlyCost" value="2.0951" class="readonly" readonly>
         <span style="margin-left: 0px; color: var(--text-color);">%</span>
     </div>
 
@@ -1829,9 +1830,9 @@
 </script>
 
 <!-- 在 HTML 中添加 Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.2.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.2.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.2.2/firebase-firestore.js"></script>
 
 </body>
 </html>
